# hash-hunter

./: README.md  deployment.md  justfile  technology_environment.md  testing_policy.md
.github/actions/setup-frontend/: action.yml
.github/workflows/: backend.yml  frontend.yml  playwright.yml
.husky/: post-merge  pre-commit
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.anvil  apply-all.sh  rustfmt.toml  setup.sh
backend/charts/: README.md  api.configmap.yaml  api.deployment.yaml  api.ingress.yaml  api.secret.yaml  api.service.yaml  kubeconfig.secret.yaml  kubeseal.pem  postgres.configmap.yaml  postgres.deployment.yaml  postgres.secret.yaml  postgres.service.yaml  postgres.volume.yaml  sealed-secrets.local.yaml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: app.rs  docs.rs  error.rs  lib.rs  state.rs
backend/crates/api/src/blockchain/: mod.rs  rpc.rs
backend/crates/api/src/middlewares/: challenge.rs  mod.rs  user.rs
backend/crates/api/src/routes/: mod.rs  rpc.rs
backend/crates/api/src/routes/challenge/: create.rs  get.rs  mod.rs  remove.rs  update.rs
backend/crates/api/src/routes/node/: create.rs  get.rs  mod.rs  remove.rs  reset.rs  state.rs  validate.rs
backend/crates/api/src/routes/user/: get.rs  login.rs  mod.rs  register.rs  remove.rs  update.rs
backend/crates/api/templates/: service.yaml
backend/crates/pods-killer/: Cargo.toml
backend/crates/pods-killer/src/: cli.rs  kube_handler.rs  main.rs
backend/migrations/: 1_user.sql  2_challenge.sql  3_node.sql
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/blockchain/: ethereum.rs  mod.rs  rpc.rs  solana.rs
backend/src/middlewares/: auth.rs  challenge.rs  user.rs
backend/src/routes/: anvil.rs  auth.rs  mod.rs  rpc.rs
backend/src/routes/challenge/: create.rs  deploy.rs  get.rs  mod.rs  remove.rs  shutdown.rs  solved.rs  update.rs
backend/src/routes/node/: args.rs  create.rs  get.rs  mod.rs  remove.rs  reset.rs  state.rs  validate.rs
backend/src/routes/user/: create.rs  get.rs  login.rs  mod.rs  register.rs  remove.rs  token.rs  update.rs
backend/templates/: deployment.yaml
frontend/: index.html  lint-staged.config.cjs  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/: token.md
frontend/src/components/: ChallengeCard.tsx  GradientButton.tsx  HeaderChallenge.tsx  Layout.tsx  Navbar.tsx  Notation.tsx  mode-toggle.tsx
frontend/src/pages/: Challenge.tsx  Home.test.tsx  Home.tsx  ListChallenges.tsx
frontend/tests-examples/: demo-todo-app.spec.ts
