[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lints.rust]
# missing-debug-implementations = "warn" # TODO
unused-must-use = "deny"
# unreachable-pub = "warn" # TODO
unnameable-types = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
explicit-into-iter-loop = "warn"
if-not-else = "warn"
ignored-unit-patterns = "warn"
inconsistent-struct-constructor = "warn"
large-enum-variant = "allow"
match-bool = "warn"
missing-const-for-fn = "warn"
missing-fields-in-debug = "warn"
needless-for-each = "warn"
needless-pass-by-value = "warn"
needless-raw-string-hashes = "warn"
non-std-lazy-statics = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
redundant-closure-for-method-calls = "warn"
ref-option = "warn"
semicolon-if-nothing-returned = "warn"
single-char-pattern = "warn"
uninlined-format-args = "warn"
unnecessary-semicolon = "warn"
unnecessary-wraps = "warn"
unused-self = "warn"
use-self = "warn"

[dependencies]
alloy = { version = "0.12.5", features = ["provider-debug-api", "node-bindings"] }
anyhow = "1.0.97"
argon2 = "0.5.3"
async-trait = "0.1.87"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "9.3.1", default-features = false }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
strum = { version = "0.27.1", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["add-extension", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["serde"] }
