[workspace]
members = ["crates/api", "crates/pods-killer"]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
missing-debug-implementations = "warn"
unnameable-types = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
explicit-into-iter-loop = "warn"
if-not-else = "warn"
ignored-unit-patterns = "warn"
inconsistent-struct-constructor = "warn"
large-enum-variant = "allow"
match-bool = "warn"
missing-const-for-fn = "warn"
missing-fields-in-debug = "warn"
needless-for-each = "warn"
needless-pass-by-value = "warn"
needless-raw-string-hashes = "warn"
non-std-lazy-statics = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
redundant-closure-for-method-calls = "warn"
ref-option = "warn"
semicolon-if-nothing-returned = "warn"
single-char-pattern = "warn"
uninlined-format-args = "warn"
unnecessary-semicolon = "warn"
unnecessary-wraps = "warn"
unused-self = "warn"
use-self = "warn"

[workspace.dependencies]
k8s-openapi = "0.24.0"
sqlx = { version = "0.8.3", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
clap = { version = "4.5.31", features = ["derive", "env"] }
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
kube = { version = "0.98.0", features = ["runtime"] }
