[package]
name = "api"
version.workspace = true
edition.workspace = true

[lints.rust]
# missing-debug-implementations = "warn" # TODO
unused-must-use = "deny"
# unreachable-pub = "warn" # TODO
unnameable-types = "warn"

[dependencies]
alloy = { version = "0.12.5", features = [
  "provider-debug-api",
  "node-bindings",
] }
anyhow = "1.0.97"
argon2 = "0.5.3"
async-trait = "0.1.87"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "9.3.1", default-features = false }
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "=1.0.203", features = ["derive"] }
serde_derive = "=1.0.203"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
strum = { version = "0.27.1", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["add-extension", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["serde"] }
