[package]
name = "pods-killer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
tracing.workspace = true
futures = "0.3.31"
chrono.workspace = true
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { workspace = true, features = ["runtime"] }
async-trait = "0.1.89"
humantime = "2.3.0"