[package]
name = "pods-killer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures = "0.3.31"
humantime = "2.3.0"
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { workspace = true, features = ["runtime"] }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
